--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             box-shadow: 0 0 15px rgba(0, 242, 255, 0.2);
         }
 
-        /* Hide number input spinners */
+        /* 隱藏數字輸入框的上下箭頭 */
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button {
             -webkit-appearance: none;
@@ -42,7 +42,7 @@
             -moz-appearance: textfield;
         }
 
-        /* Hide scrollbars */
+        /* 隱藏捲軸 */
         ::-webkit-scrollbar {
             display: none;
         }
@@ -62,17 +62,19 @@
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "vite": "https://esm.sh/vite@^7.3.1"
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
+    <!-- 關鍵修正：必須顯式引用 index.tsx，Vite 才能正確編譯 -->
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
