--- a/index.html
+++ b/index.html
@@ -31,12 +31,18 @@
         body {
             font-family: 'Noto Sans TC', sans-serif;
             background-color: var(--bg-color);
+            background-image: var(--bg-image);
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            background-repeat: no-repeat;
             color: var(--text-color);
             -webkit-tap-highlight-color: transparent;
             overflow-x: hidden;
-            transition: color 0.5s ease;
+            transition: background 0.5s ease, color 0.5s ease;
             margin: 0;
             padding: 0;
+            min-height: 100vh;
         }
 
         .tech-font {
@@ -93,7 +99,6 @@
             scrollbar-width: none;
         }
         
-        /* Smooth Fade In Animations */
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(10px); }
             to { opacity: 1; transform: translateY(0); }
