--- a/index.html
+++ b/index.html
@@ -28,21 +28,37 @@
             --bg-image: none;
         }
 
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            background-color: var(--bg-color);
+        }
+
         body {
             font-family: 'Noto Sans TC', sans-serif;
-            background-color: var(--bg-color);
-            background-image: var(--bg-image);
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-            background-repeat: no-repeat;
             color: var(--text-color);
             -webkit-tap-highlight-color: transparent;
             overflow-x: hidden;
-            transition: background 0.5s ease, color 0.5s ease;
-            margin: 0;
-            padding: 0;
-            min-height: 100vh;
+            transition: color 0.5s ease;
+        }
+
+        /* 高相容性背景技術 */
+        body::before {
+            content: "";
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            background-image: var(--bg-image);
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-color: var(--bg-color);
+            transition: background-image 0.8s ease-in-out;
+            pointer-events: none;
         }
 
         .tech-font {
